@@ -2,6 +2,9 @@
 This file was created to explain some peculiarities of repositories used by the slpkg.
 --------------------------------------------------------------------------------------
 
+
+Default repositories:
+---------------------
 SlackBuilds.org (sbo) FAQ(15): 
 Slackware current is not supported, but as a general rule, the scripts
 should work on it as well.
@@ -30,3 +33,14 @@ repository has no reference dependencies.
 
 Slackel.gr (slackl) repository must be used only from Slackware current users and has the
 same peculiarities in the repository 'slackr'.
+
+
+Custom repositories:
+--------------------
+There is the possibility of adding the repository directly from the user enough to address
+up to be the PACKAGES.TXT files and CHECKSUMS.md5 least. If not is there for file 
+ChangeLog.txt should run the command 're-create' instead of 'update' to update the package 
+lists. 
+Sometimes you may experience some problems with these repositories such as the not correctly
+resolve dependencies, and this may happen some specificities separate list which unfortunately
+can not be calculated sometimes good is the purpose of mentioning these problems.
