@@ -79,7 +79,7 @@ find $PKG -print0 | xargs -0 file | grep -e "executable" -e "shared object" | gr
 
 mkdir -p $PKG/etc/slpkg
 # install configurations files
-CONFIGS="slpkg.conf blacklist slackware-mirrors"
+CONFIGS="slpkg.conf blacklist slackware-mirrors custom-repositories"
 for file in $CONFIGS; do
     install -D -m0644 conf/$file $PKG/etc/slpkg/${file}.new
 done
