@@ -142,7 +142,8 @@ def views(pkg_for_upgrade, upgrade_all, comp_sum):
     '''
     Views packages
     '''
-    for upg, upgrade, size in zip(pkg_for_upgrade, upgrade_all, comp_sum):
+    for upg, upgrade, size in sorted(zip(pkg_for_upgrade, upgrade_all,
+                                         comp_sum)):
         pkg_split = split_package(upgrade[:-4])
         print(" {0}{1}{2}{3} {4}{5} {6}{7}{8}{9}{10}{11:>12}{12}".format(
             color['YELLOW'], upg, color['ENDC'],
